<resources>
    <string name="app_name">NeoSTORE</string>

    <string name="str_hello">Hello !\nWELCOME TO <b>NeoSTORE</b></string>
    <string name="str_username">User name</string>
    <string name="str_pwd">Password</string>
    <string name="str_login">Log in</string>
    <string name="str_forgot_pwd"><b>Forgot Password ?</b></string>
    <string name="str_sign_up"><b>SIGN UP</b></string>
    <string name="str_make_your">MAKE YOUR</string>
    <string name="str_home_beauty"><b>HOME BEAUTIFUL</b></string>
    <string name="str_place_furniture">The best simple place where you discover most wonderful furniture \'s and make your home beautiful</string>
    <string name="str_get_started">Get Started</string>
    <string name="str_login_to">Login to \t</string>
    <string name="str_neo_store">NeoSTORE</string>
    <string name="str_email">Email</string>
    <string name="str_or_email">OR login with Email</string>
    <string name="str_ct_google">Continue with Google</string>
    <string name="str_ct_facebook">Continue with Facebook</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_confirm_pwd">Confirm Password</string>
    <string name="str_terms_condition">I agree with terms &amp; conditions</string>
    <string name="str_register">Register</string>
    <string name="str_item_name">Item Name</string>
    <string name="str_item_price">Item Price</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="chair">Chair</string>
    <string name="table">Table</string>
    <string name="sofa">Sofa</string>
    <string name="cupboard">Cupboard</string>
    <string name="lamb">Lamb</string>
    <string name="detail">Detail</string>
    <string name="product_name">Product Name</string>
    <string name="base_price">Base Price</string>
    <string name="offer_price">Offer Price</string>
    <string name="offer_percentage">Offer Percentage</string>
    <string name="product_description">Product Description</string>
    <string name="wishlist">Wishlist</string>
    <string name="move_to_bag">Move To Bag</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="product_details">Product Details</string>
    <string name="title_activity_wish_list">WishListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>