<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".view.activities.LoginWithEmailActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:paddingTop="9dp"
        android:text="@string/str_login_to"
        android:textColor="@color/red_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/tv_neoStore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_neoStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:gravity="start"
        android:text="@string/str_neo_store"
        android:textColor="@color/red_700"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_login_to"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_ct_google"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_google_24x24"
        android:drawablePadding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_neoStore" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_border"
        android:drawableStart="@drawable/ic_facebook_24x24"
        android:drawablePadding="15dp"
        android:hint="@string/str_ct_facebook"
        android:padding="15dp"
        android:textStyle="bold"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_google" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/str_or_email"
        android:padding="15dp"
        android:drawableStart="@drawable/divider"
        android:drawableEnd="@drawable/divider"
        android:textColorHint="@color/black_200"
        android:textSize="14sp"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_facebook" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_email"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_pwd"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_solid_border"
        android:padding="14dp"
        android:text="@string/str_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/str_forgot_pwd"
        android:textColor="@color/red_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/str_sign_up"
        android:textColor="@color/red_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>