<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".view.view.ui.SignUpActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_neoStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:gravity="center_horizontal"
        android:text="@string/str_neo_store"
        android:textColor="@color/red_700"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_first_name"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_neoStore" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_last_name"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_firstName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_email"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_lastName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_pwd"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_border"
        android:hint="@string/str_confirm_pwd"
        android:padding="15dp"
        android:textColorHint="@color/red_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_terms_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/str_terms_condition"
        android:textColor="@color/black_200"
        android:textSize="14sp"
        android:padding="5dp"
        android:paddingStart="-120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_confirm_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rec_red_border"
        android:padding="14dp"
        android:text="@string/str_register"
        android:textAllCaps="false"
        android:textColor="@color/red_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_terms_condition" />

</androidx.constraintlayout.widget.ConstraintLayout>