<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_get_started"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".view.view.ui.activity.OnBoardingActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_make_your"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:gravity="start"
        android:text="@string/str_make_your"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home_beauty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/str_home_beauty"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_make_your" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_place_furniture"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_beauty" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/str_get_started"
        android:textSize="14sp"
        android:padding="14dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/rec_red_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_place" />

</androidx.constraintlayout.widget.ConstraintLayout>